--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./:/var/www
       - ./.docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     depends_on:
-      - mysql
+      - postgres
       - redis
 
   nginx:
@@ -43,31 +43,30 @@ services:
     depends_on:
       - php
 
-  mysql:
-    image: mysql:8.0
-    container_name: mysql
+  postgres:
+    image: postgres:16
+    container_name: postgres
     restart: unless-stopped
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_ROOT_HOST: "%"
-      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_DATABASE: "${DB_DATABASE}"
-      MYSQL_PASSWORD: "${DB_DATABASE}"
+      POSTGRES_USER: "${DB_USERNAME:-postgres}"
+      POSTGRES_PASSWORD: "${DB_PASSWORD:-secret}"
+      POSTGRES_DB: "${DB_DATABASE:-school}"
     ports:
-      - "3307:3306"
+      - "5433:5432"
     volumes:
-      - mysql_data:/var/lib/mysql
-    
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+      - postgres_data:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
     restart: unless-stopped
-    container_name: phpmyadmin
     depends_on:
-      - mysql
+      - postgres
     ports:
       - "4040:80"
     environment:
-      PMA_ARBITRARY: 1
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
 
   redis:
     image: redis:5
@@ -76,5 +75,5 @@ services:
       - redisdata:/data
 
 volumes:
-  mysql_data:
+  postgres_data:
   redisdata:
