student curd completed

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:xPhRPr2HtP+DAhb4vpT+Cw71uaoNHXJRtaWqzhq5/6Q=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
