--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^6.0.1",
+        "install": "^0.13.0",
+        "npm": "^11.6.2",
+        "vue": "^3.5.24",
+        "vue-router": "^4.6.3"
     }
 }
