--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.1",
         "install": "^0.13.0",
+        "lodash": "^4.17.21",
         "npm": "^11.6.2",
         "pinia": "^3.0.4",
         "vue": "^3.5.24",
