--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.1",
+        "chart.js": "^4.5.1",
         "install": "^0.13.0",
         "lodash": "^4.17.21",
         "npm": "^11.6.2",
