--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "npm": "^11.6.2",
         "pinia": "^3.0.4",
         "vue": "^3.5.24",
+        "vue-awesome-paginate": "^1.2.0",
         "vue-router": "^4.6.3",
         "vue3-toastify": "^0.2.8"
     }
